<resources>
    <string name="app_name">EasyShop</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="easyshop">EasyShop</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="register_here">Register here...</string>
    <string name="signin_here">Signin here...</string>
    <string name="easyshop1">EasyShop</string>
    <string name="search">Search</string>
    <string name="search_products">Search Products</string>
    <string name="product_categories">Product Categories</string>
    <string name="view_all">View all</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="mens">Mens</string>
    <string name="women">Women</string>
    <string name="kids">kids</string>
    <string name="kids1">Kids</string>
    <string name="electronics">Electronics</string>
    <string name="toys">Toys</string>
    <string name="makeups">Makeups</string>
    <string name="cosmetics">Cosmetics</string>
    <string name="sports">Sports</string>
    <string name="stationery">Stationery</string>
    <string name="snacks">Snacks</string>
    <string name="loveliness">Loveliness</string>
    <string name="nutrition">Nutrition</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search1">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="dash">Dash</string>
    <string name="profile">Profile</string>
    <string name="this_is_your_cart_ncurrently_unavailable">This is your Cart\ncurrently unavailable</string>
    <string name="this_is_dashboard_ncurrently_unavailable">This is Dashboard\nCurrently unavailable</string>
    <string name="this_is_profile_page_currently_unavailable">This is profile page/nCurrently unavailable</string>
    <string name="this_is_profile_page_ncurrently_unavailable">This is profile page\nCurrently unavailable</string>
    <string name="this_is_search_page_ncurrently_unavailable">This is Search page\nCurrently unavailable</string>
    <string name="profile1">Profile</string>
    <string name="cart1">Cart</string>
    <string name="home1">Home</string>
    <string name="dash1">Dash</string>
    <string name="search2">Search</string>
</resources>