<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#0000FF"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_height="50dp"
                android:layout_marginEnd="60dp"
                android:layout_width="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/menu"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cherry_swash_bold"
                    android:text="@string/easyshop1"
                    android:textAlignment="center"
                    android:drawableStart="@drawable/touch"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textColor="#FFF7F7"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UseCompatTextViewDrawableXml" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="#0000FF"
                    app:srcCompat="@drawable/user"
                    tools:ignore="ContentDescription" />
                <ImageButton
                    android:id="@+id/imageButto"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="#0000FF"
                    app:srcCompat="@drawable/cart"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/border"
            android:layout_marginRight="30dp"
            android:layout_height="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#1758FB"
                android:hint="@string/search_products"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="150dp">
    <ImageView
        android:id="@+id/pic0"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pic0" />
    <ImageView
        android:id="@+id/pic1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pic1" />
    <ImageView
        android:id="@+id/pic2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pic2" />
    <ImageView
        android:id="@+id/pic3"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pic3" />

    <ImageView
        android:id="@+id/pic4"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pic4" />
    <ImageView
        android:id="@+id/pic5"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pic5" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/pic0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pic0"
        app:srcCompat="@drawable/bac"
        android:backgroundTint="#00FFFFFF"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pic0"
        app:layout_constraintTop_toTopOf="@+id/pic0"
        app:srcCompat="@drawable/bacc"
        android:backgroundTint="#00FFFFFF"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/product_categories"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/white"
            android:text="@string/view_all"
            android:textAllCaps="false"
            android:textColor="#0023FF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:id="@+id/frameLayout"/>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:background="@color/teal_200"
        android:layout_height="8dp" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/bottomNavigation"
        app:menu="@menu/menu_items"
        android:layout_height="wrap_content"/>

</LinearLayout>